deploy/kustomize/base/nextjs-example.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextjs-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-example-app
  namespace: nextjs-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-example-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextjs-example-app
    spec:
      containers:
      - name: nextjs-example-app
        image: chagchagchag/nextjs-argocd-example:v0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            protocol: TCP
        # resources:
        #   limits:
        #     memory: "512Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 3000
