deploy/kustomize/base/nextjs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-example-ingress
  namespace: nextjs-example
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nextjs-example-service
            port:
              number: 3000
